# SDI

./: README.md
consistent_hashing/: CMakeLists.txt  README.md  consistent_hash.cpp  consistent_hash.h  example.cpp  test_consistent_hash.cpp
key_value_store/: CMakeLists.txt  README.md  example.cpp  kv_store.cpp  kv_store.h  test_kv_store.cpp
rate_limiter/: CMakeLists.txt  README.md  example.cpp  fixed_window.cpp  fixed_window.h  leaking_bucket.cpp  leaking_bucket.h  sliding_window_counter.cpp  sliding_window_counter.h  sliding_window_log.cpp  sliding_window_log.h  test_fixed_window.cpp  test_leaking_bucket.cpp  test_sliding_window_counter.cpp  test_sliding_window_log.cpp  test_token_bucket.cpp  token_bucket.cpp  token_bucket.h
scache/: CMakeLists.txt  README.md  example.cpp  example_comprehensive.cpp  scache.h  test_strings_cache_comprehensive.cpp
short_url/: CMakeLists.txt  README.md  example.cpp  example_kv.cpp  test_url_shortener.cpp  test_url_shortener_kv.cpp  url_shortener.cpp  url_shortener.h  url_shortener_kv.cpp  url_shortener_kv.h
udp_recv/: README.md  main.cpp  main.h  udp_recv.sln  udp_recv.vcxproj
uid_gen/: CMakeLists.txt  README.md  example.cpp  snowflake_id.cpp  snowflake_id.h  test_snowflake.cpp
